--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "",
-    "short_name": "",
-    "description": "",
-    "start_url": "",
-    "display": "",
-    "background_color": "",
-    "theme_color": "",
+    "name": "Lab8_Starter",
+    "short_name": "Nicholas Nurwinata",
+    "description": "lab  8 starter",
+    "start_url": "/index.html",
+    "display": "standalone",
+    "background_color": "cyan",
+    "theme_color": "red",
     "icons": [
       {
         "src": "/assets/images/icons/icon-192x192.png",
