--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Lab8_Starter",
     "short_name": "Nicholas Nurwinata",
     "description": "lab  8 starter",
-    "start_url": "/index.html",
+    "start_url": "./Lab8_Starter/",
     "display": "standalone",
     "background_color": "cyan",
     "theme_color": "red",
